# IfcCreator

./: .gitignore  main.py  pyproject.toml
api/v1/: ifc_routes.py
core/: cartesian_point.py  logging_decorator.py
core/entities/: beam.py  building_element.py
models/: ifc_schemas.py
models/dto/: beam_dto.py  building_element_dto.py
services/: ifc_creator.py  ifc_model_director.py  ifc_model_manager.py  ifc_model_manager_factory.py
services/strategies/: beam_creator.py  building_element_creator.py  ifc2x3_strategy.py  ifc4_strategy.py  ifc4x3_strategy.py  model_strategy.py
tests/: test_data.json  test_ifc.py
